--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,10 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.home-populargif-ul{
+  color: white;
+  list-style: none;
+  text-decoration: none;
+  cursor: default;
+}
